implement create update product type
