# docs/swagger.json
@@ -220,7 +220,7 @@
                 "tags": [
                     "Product"
                 ],
-                "summary": "Delete Product",
+                "summary": "DeleteProduct Product",
                 "parameters": [
                     {
                         "type": "integer",
@@ -235,6 +235,51 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/common.ResponseMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResponseMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/type": {
+            "post": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
+                "description": "Create Or Update Product Type Data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product Type"
+                ],
+                "summary": "Create Or Update Product Type",
+                "parameters": [
+                    {
+                        "description": "Product Type data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ProductTypeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ProductResponseExample"
                         }
                     },
                     "400": {
@@ -361,6 +406,17 @@
                     "items": {
                         "$ref": "#/definitions/models.ProductData"
                     }
+                }
+            }
+        },
+        "models.ProductTypeRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
